--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,9 @@
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
     "@react-navigation/stack": "^7.1.1",
+    "@types/jsonwebtoken": "^9.0.9",
     "axios": "^1.7.9",
+    "jwt-decode": "^4.0.0",
     "react": "18.3.1",
     "react-native": "0.77.0",
     "react-native-elements": "^3.4.3",
@@ -27,6 +29,7 @@
     "react-native-safe-area-context": "^5.2.0",
     "react-native-screens": "^4.6.0",
     "react-native-splash-screen": "^3.3.0",
+    "react-native-toast-message": "^2.2.1",
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
