--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/stack": "^7.1.1",
     "@types/jsonwebtoken": "^9.0.9",
     "axios": "^1.7.9",
+    "eventHub": "file:",
     "jwt-decode": "^4.0.0",
     "react": "18.3.1",
     "react-native": "0.77.0",
