--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@react-native-async-storage/async-storage": "^2.1.1",
+    "@react-native/gradle-plugin": "^0.79.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
@@ -20,7 +21,6 @@
     "@types/jsonwebtoken": "^9.0.9",
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
-    "eventHub": "file:",
     "jwt-decode": "^4.0.0",
     "react": "18.3.1",
     "react-native": "0.77.0",
