--- a/MTShop/package.json
+++ b/MTShop/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/stack": "^7.2.10",
+    "axios": "^1.8.4",
     "react": "19.0.0",
     "react-native": "0.79.0",
     "react-native-config": "^1.5.5",
@@ -21,6 +22,7 @@
     "react-native-reanimated": "^3.17.3",
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.10.0",
+    "react-native-toast-message": "^2.2.1",
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
