--- a/MTShop/package.json
+++ b/MTShop/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "@react-native-masked-view/masked-view": "^0.3.2",
+    "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
     "@react-navigation/stack": "^7.2.10",
     "axios": "^1.8.4",
+    "MTShop": "file:",
     "react": "19.0.0",
     "react-native": "0.79.0",
     "react-native-config": "^1.5.5",
