--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@types/jsonwebtoken": "^9.0.9",
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
+    "eventHub": "file:",
     "jwt-decode": "^4.0.0",
     "react": "18.3.1",
     "react-native": "0.77.0",
