--- a/MTShop/package.json
+++ b/MTShop/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native-stack": "^7.3.10",
     "@react-navigation/stack": "^7.2.10",
     "axios": "^1.8.4",
+    "moment": "^2.30.1",
     "MTShop": "file:",
     "react": "19.0.0",
     "react-native": "0.79.0",
