--- a/MTShop/tsconfig.json
+++ b/MTShop/tsconfig.json
@@ -6,5 +6,15 @@
     "babel.config.js",
     "metro.config.js",
     "jest.config.js"
-  ]
+  ],
+  "compilerOptions": {
+    "jsx": "react",
+    "allowJs": true,
+    "target": "esnext",
+    "module": "esnext",
+    "strict": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "resolveJsonModule": true
+  }
 }
