--- a/MTShop/package.json
+++ b/MTShop/package.json
@@ -14,10 +14,12 @@
     "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
+    "@react-navigation/material-top-tabs": "^7.2.10",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
     "@react-navigation/stack": "^7.2.10",
     "axios": "^1.8.4",
+    "invariant": "^2.2.4",
     "moment": "^2.30.1",
     "MTShop": "file:",
     "react": "19.0.0",
@@ -25,6 +27,7 @@
     "react-native-config": "^1.5.5",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.25.0",
+    "react-native-image-picker": "^8.2.0",
     "react-native-mmkv": "^3.2.0",
     "react-native-reanimated": "^3.17.3",
     "react-native-safe-area-context": "^5.3.0",
@@ -45,6 +48,7 @@
     "@react-native/metro-config": "0.79.0",
     "@react-native/typescript-config": "0.79.0",
     "@types/jest": "^29.5.13",
+    "@types/lodash.debounce": "^4.0.9",
     "@types/react": "^19.0.0",
     "@types/react-test-renderer": "^19.0.0",
     "eslint": "^8.19.0",
