--- a/MTShop/package.json
+++ b/MTShop/package.json
@@ -17,7 +17,7 @@
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
     "@react-navigation/stack": "^7.2.10",
-    "axios": "^1.8.4",
+    "axios": "^1.9.0",
     "moment": "^2.30.1",
     "MTShop": "file:",
     "react": "19.0.0",
@@ -29,6 +29,8 @@
     "react-native-reanimated": "^3.17.3",
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.10.0",
+    "react-native-svg": "^15.11.2",
+    "react-native-svg-transformer": "^1.5.0",
     "react-native-toast-message": "^2.2.1",
     "react-native-vector-icons": "^10.2.0"
   },
