--- a/MTShop/tsconfig.json
+++ b/MTShop/tsconfig.json
@@ -14,7 +14,6 @@
     "module": "esnext",
     "strict": true,
     "esModuleInterop": true,
-    "skipLibCheck": true,
-    "resolveJsonModule": true
+    "skipLibCheck": true
   }
 }
