--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,8 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Ignore Android build files
+/frontend/android/app/build/
+/*.apk
+*.so
