--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   },
   "type": "module",
   "dependencies": {
+    "axios": "^1.9.0",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.5.1",
     "cors": "^2.8.5",
