--- a/MTShop/android/app/src/main/AndroidManifest.xml
+++ b/MTShop/android/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
   android:maxSdkVersion="28" />
   <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
   <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
+  <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
   <application
       android:name=".MainApplication"
       android:label="@string/app_name"
@@ -13,6 +14,16 @@
       android:allowBackup="false"
       android:theme="@style/AppTheme"
       android:supportsRtl="true">
+    <receiver
+  android:name="com.dieam.reactnativepushnotification.modules.RNPushNotificationBootEventReceiver"
+  android:exported="true">
+      <intent-filter>
+        <action android:name="android.intent.action.BOOT_COMPLETED" />
+      </intent-filter>
+    </receiver>
+    <service
+  android:name="com.dieam.reactnativepushnotification.modules.RNPushNotificationListenerService"
+  android:exported="false"/>
     <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
@@ -25,5 +36,11 @@
         <category android:name="android.intent.category.LAUNCHER" />
       </intent-filter>
     </activity>
+    <meta-data
+  android:name="com.dieam.reactnativepushnotification.notification_channel_name"
+  android:value="Default channel" />
+    <meta-data
+  android:name="com.dieam.reactnativepushnotification.notification_channel_description"
+  android:value="Used for default channel" />
   </application>
 </manifest>
