--- a/MTShop/package.json
+++ b/MTShop/package.json
@@ -10,6 +10,9 @@
     "test": "jest"
   },
   "dependencies": {
+    "@notifee/react-native": "^9.1.8",
+    "@react-native-firebase/app": "^22.1.0",
+    "@react-native-firebase/messaging": "^22.1.0",
     "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
@@ -29,7 +32,9 @@
     "react-native-gesture-handler": "^2.25.0",
     "react-native-image-picker": "^8.2.0",
     "react-native-mmkv": "^3.2.0",
+    "react-native-onesignal": "^5.2.9",
     "react-native-permissions": "^5.4.0",
+    "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "^3.17.3",
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.10.0",
@@ -53,6 +58,7 @@
     "@types/jest": "^29.5.13",
     "@types/lodash.debounce": "^4.0.9",
     "@types/react": "^19.0.0",
+    "@types/react-native-push-notification": "^8.1.4",
     "@types/react-test-renderer": "^19.0.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
