--- a/MTShop/android/app/src/main/AndroidManifest.xml
+++ b/MTShop/android/app/src/main/AndroidManifest.xml
@@ -3,9 +3,14 @@
   <uses-permission
   android:name="android.permission.WRITE_EXTERNAL_STORAGE"
   android:maxSdkVersion="28" />
-  <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+  <uses-permission android:name="android.permission.INTERNET" />
+<uses-permission android:name="android.permission.READ_MEDIA_VIDEO" />
   <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
+  <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
   <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" android:maxSdkVersion="28"/>
+  <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE"/>
+
   <application
       android:name=".MainApplication"
       android:label="@string/app_name"
@@ -13,7 +18,7 @@
       android:roundIcon="@mipmap/ic_launcher_round"
       android:allowBackup="false"
       android:theme="@style/AppTheme"
-      android:supportsRtl="true">
+      android:supportsRtl="true" android:requestLegacyExternalStorage="true">
     <receiver
   android:name="com.dieam.reactnativepushnotification.modules.RNPushNotificationBootEventReceiver"
   android:exported="true">
