--- a/MTShop/android/app/src/main/AndroidManifest.xml
+++ b/MTShop/android/app/src/main/AndroidManifest.xml
@@ -10,12 +10,19 @@
   <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
   <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" android:maxSdkVersion="28"/>
   <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE"/>
-
+  <queries>
+    <intent>
+      <action android:name="android.intent.action.GET_CONTENT" />
+    </intent>
+    <intent>
+      <action android:name="android.intent.action.PICK" />
+      <data android:mimeType="image/*" />
+    </intent>
+  </queries>
   <application
       android:name=".MainApplication"
       android:label="@string/app_name"
       android:icon="@mipmap/ic_launcher"
-      android:roundIcon="@mipmap/ic_launcher_round"
       android:allowBackup="false"
       android:theme="@style/AppTheme"
       android:supportsRtl="true" android:requestLegacyExternalStorage="true">
